internal/xds/translator/testdata/out/xds-ir/ext-proc-with-traffic-settings.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.foo.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: default
            sectionName: http
    name: default/gateway-1/http/www_foo_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.filter_chain.eep.listener:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          disabled: true
        envoy.filters.http.filter_chain.eep.route:
          '@type': type.googleapis.com/envoy.extensions.filters.http.filter_chain.v3.FilterChainConfigPerRoute
          filterChain:
            filters:
            - name: envoy.filters.http.ext_proc/0
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                grpcService:
                  envoyGrpc:
                    authority: grpc-backend.envoy-gateway:8000
                    clusterName: envoyextensionpolicy/default/policy-for-http-route/0
                  timeout: 10s
                processingMode:
                  requestHeaderMode: SKIP
                  requestTrailerMode: SKIP
                  responseHeaderMode: SKIP
                  responseTrailerMode: SKIP
  - domains:
    - www.bar.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: default
            sectionName: http
    name: default/gateway-1/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-2
              namespace: default
      name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
